# infra-study

./: README.md
week1/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
week2/: check_ebs.sh  check_efs.sh  check_s3.py  lambda_function.py
week3/: dynamodb.py  elasticache.py  pyproject.toml  rds.sql  redshift.sql
