[tool.poetry]
name = "week1"
version = "0.1.0"
description = "Hasan infra week1"
authors = ["treblenalto <taehee107275@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
black = "^23.11.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
